Обновление шаблона решения gaa-solution

--- a/content/gaa-solution/.gitignore
+++ b/content/gaa-solution/.gitignore
@@ -11,6 +11,7 @@ TestResults
 StyleCop.Cache
 _ReSharper.Caches
 _TeamCity.*
+*.nupkg
 *.user
 *.suo
 *.~*
@@ -21,6 +22,4 @@ _TeamCity.*
 !.gitignore
 !.version
 !.dockerignore
-!.gitlab-ci.yml
-!.overrides-ci.yml
 !.test.bat
