--- a/content/gaa-project-service/Gaa.Project.Service.csproj
+++ b/content/gaa-project-service/Gaa.Project.Service.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Description>Web service.</Description>
@@ -8,13 +8,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MassTransit" Version="8.*" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.*" />
-    <PackageReference Include="NLog" Version="5.*" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="5.*" />
-    <PackageReference Include="Quartz" Version="3.*" />
-    <PackageReference Include="Quartz.AspNetCore" Version="3.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.*" />
+    <PackageReference Include="MassTransit" Version="8.1.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.0" />
+    <PackageReference Include="NLog" Version="5.2.4" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.4" />
+    <PackageReference Include="Quartz" Version="3.7.0" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.7.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 </Project>
