--- a/src/Gaa.DotNet.Templates/content/gaa-solution/Directory.Build.props
+++ b/src/Gaa.DotNet.Templates/content/gaa-solution/Directory.Build.props
@@ -11,7 +11,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageIcon>icon.png</PackageIcon>
-    <Build_Version Condition=" '$(Build_Version)' == '' ">0.1.0</Build_Version>
+    <Build_Version Condition=" '$(Build_Version)' == '' ">$([System.IO.File]::ReadAllText($(MSBuildThisFileDirectory).version).Trim())</Build_Version>
     <Build_Number Condition=" '$(Build_Number)' == '' ">$(Build_Version).0</Build_Number>
     <Version>$(Build_Version)</Version>
     <PackageVersion>$(Build_Version)</PackageVersion>
