--- a/src/Gaa.DotNet.Templates/content/gaa-project-service/appsettings.Development.json
+++ b/src/Gaa.DotNet.Templates/content/gaa-project-service/appsettings.Development.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "RabbitMQ": "rabbitmq://guest:guest@localhost:5672/dev"
   }
 }
