--- a/src/Gaa.DotNet.Templates/content/gaa-project-service/nlog.config
+++ b/src/Gaa.DotNet.Templates/content/gaa-project-service/nlog.config
@@ -5,7 +5,7 @@
       autoShutdown="true"
       throwExceptions="true"
       internalLogLevel="Info"
-      internalLogFile="c:\logs\web-service\web-service-internal.log" >
+      internalLogFile="c:\logs\service\service-internal.log" >
   <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
@@ -30,7 +30,7 @@
             encoding="utf-8"
             maxArchiveFiles="5"
             archiveAboveSize="1000000"
-            fileName="c:\logs\web-service\web-service-${shortdate}.log"
+            fileName="c:\logs\service\service-${shortdate}.log"
             layout="${longdate}|${threadId}|${level:uppercase=true}|${logger}|${message}${onexception:${newline}${exception:format=toString}}" />
   </targets>
   <!-- rules to map from logger name to target -->
