--- a/src/Gaa.DotNet.Templates/content/gaa-solution/.gitignore
+++ b/src/Gaa.DotNet.Templates/content/gaa-solution/.gitignore
@@ -18,11 +18,12 @@ _TeamCity.*
 .*
 
 # indexed
+!.dockerignore
 !.editorconfig
 !.gitignore
-!.version
-!.dockerignore
+!.mr-develop-to-master.bat
+!.tag.sh
+!.template.config
 !.test.bat
 !.test.sh
-!.mr-develop-to-main.bat
-!.template.config
+!.version
