Обновление файлов проекта

--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,12 @@ _TeamCity.*
 
 # indexed
 !.dockerignore
+!.drone.yml
 !.editorconfig
+!.gitattributes
 !.gitignore
+!.globalconfig
 !.tag.sh
 !.template.config
-!.test.bat
 !.test.sh
 !.version
