--- a/src/Gaa.DotNet.Templates/content/gaa.project.console/Gaa.Project.Console.csproj
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.console/Gaa.Project.Console.csproj
@@ -8,4 +8,5 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <Import Project="..\..\build\Version.targets" />
 </Project>
