--- a/src/Gaa.DotNet.Templates/content/gaa.project.library/Gaa.Project.Library.csproj
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.library/Gaa.Project.Library.csproj
@@ -7,4 +7,5 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <Import Project="..\..\build\Version.targets" />
 </Project>
