Обновление шаблона gaa.project.service

--- a/src/Gaa.DotNet.Templates/content/gaa.project.service/NLog.config
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.service/NLog.config
@@ -5,10 +5,10 @@
       autoShutdown="true"
       throwExceptions="true"
       internalLogLevel="Info"
-      internalLogFile="c:\logs\service\service-internal.log" >
+      internalLogFile="Gaa.Project.Service.log" >
   <!-- enable asp.net core layout renderers -->
   <extensions>
-    <add assembly="NLog.Web.AspNetCore"/>
+    <add assembly="NLog.Extensions.Logging"/>
   </extensions>
   <!-- the targets to write to -->
   <targets name="wrapper" async="true" >
@@ -30,7 +30,7 @@
             encoding="utf-8"
             maxArchiveFiles="5"
             archiveAboveSize="1000000"
-            fileName="c:\logs\service\service-${shortdate}.log"
+            fileName="Gaa.Project.Service.${shortdate}.log"
             layout="${longdate}|${threadId}|${level:uppercase=true}|${logger}|${message}${onexception:${newline}${exception:format=toString}}" />
   </targets>
   <!-- rules to map from logger name to target -->
