Обновление шаблона gaa.solution

--- a/src/Gaa.DotNet.Templates/content/gaa.solution/.drone.yml
+++ b/src/Gaa.DotNet.Templates/content/gaa.solution/.drone.yml
@@ -21,7 +21,7 @@ steps:
   commands:
   - |
     dotnet test --configuration $V_CONFIGURATION \
-      --settings coverlet.runsettings \
+      --settings build\coverlet.runsettings \
       --test-adapter-path:. \
       --logger:"junit;LogFilePath=../../results/{assembly}.TestResult.xml;MethodFormat=Class;FailureBodyFormat=Verbose" \
       --results-directory results/coverage \
