--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <Authors>Andrey G.</Authors>
     <Company>None</Company>
-    <Copyright>Copyright GAA $([System.DateTimeOffset]::UtcNow.ToString(yyyy)).</Copyright>
+    <Copyright>© Copyright GAA $([System.DateTimeOffset]::UtcNow.ToString(yyyy)).</Copyright>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/g-aa/gaa-dotnet-templates</RepositoryUrl>
+    <RepositoryUrl>https://github.com/g-aa/gaa.dotnet.templates</RepositoryUrl>
     <Build_Version Condition=" '$(Build_Version)' == '' ">$([System.IO.File]::ReadAllText($(MSBuildThisFileDirectory).version).Trim())</Build_Version>
     <Build_Number Condition=" '$(Build_Number)' == '' ">$(Build_Version).0</Build_Number>
     <Version>$(Build_Version)</Version>
