Добавление шаблона gaa.project.service.grpc

--- a/src/Gaa.DotNet.Templates/content/gaa.project.console/Gaa.Project.Console.csproj
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.console/Gaa.Project.Console.csproj
@@ -8,5 +8,5 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-  <Import Project="..\..\build\Version.targets" />
+  <Import Project="../../build/Version.targets" />
 </Project>
