--- a/src/Gaa.DotNet.Templates/content/gaa.project.logic/Gaa.Project.Logic.csproj
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.logic/Gaa.Project.Logic.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Description>Logic library.</Description>
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-  <Import Project="..\..\build\Version.targets" />
+  <Import Project="../../build/Version.targets" />
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
