--- a/src/Gaa.DotNet.Templates/content/gaa.project.service/Gaa.Project.Service.csproj
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.service/Gaa.Project.Service.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <UseAppHost>false</UseAppHost>
     <Description>Web service.</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-  <Import Project="..\..\build\Version.targets" />
+  <Import Project="../../build/Version.targets" />
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
