--- a/src/Gaa.DotNet.Templates/content/gaa.project.test/Gaa.Project.Test.csproj
+++ b/src/Gaa.DotNet.Templates/content/gaa.project.test/Gaa.Project.Test.csproj
@@ -6,7 +6,7 @@
     <Description>Test library for project</Description>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
-  <Import Project="..\..\build\Version.targets" />
+  <Import Project="../../build/Version.targets" />
   <ItemGroup>
     <PackageReference Include="AwesomeAssertions" Version="9.3.0" />
     <PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.8">
